package org.example.backend.enums;

public enum InstrumentStatus {
    TRADING,
    HALTED,
    RETIRED
}
