package com.enterprise.trading.domain.enums;

public enum AccountStatus {
    ACTIVE,
    SUSPENDED,
    CLOSED
}