package com.enterprise.trading.domain.enums;

public enum InstrumentAssetClass {
    EQUITY,
    BOND,
    ETF,
    FUND
}