package com.enterprise.trading.domain.enums;

public enum OrderSide {
    BUY,
    SELL
}