package com.enterprise.trading.domain.enums;

public enum OrderStatus {
    NEW,
    FILLED,
    REJECTED,
    CANCELLED
}