package com.enterprise.trading.domain.enums;

public enum RiskProfile {
    CONSERVATIVE,
    MODERATE,
    MEDIUM,
    AGGRESSIVE
}