-- ============================================================
-- 001_create_schema.sql
-- PostgreSQL
-- Initial normalized trading/account schema
-- ============================================================

BEGIN;

-- ============================================================
-- 1. ADVISOR
-- ============================================================

CREATE TABLE advisor
(
    advisor_id      INTEGER GENERATED BY DEFAULT AS IDENTITY,
    advisor_name    VARCHAR(255) NOT NULL,
    email           VARCHAR(255) NOT NULL,
    password_hash   VARCHAR(255) NOT NULL,
    hire_date       DATE NOT NULL,

    CONSTRAINT pk_advisor
        PRIMARY KEY (advisor_id),

    CONSTRAINT uq_advisor_email
        UNIQUE (email)
);


-- ============================================================
-- 2. CLIENT
-- ============================================================

CREATE TABLE client
(
    client_id       INTEGER GENERATED BY DEFAULT AS IDENTITY,
    client_name     VARCHAR(255) NOT NULL,
    email           VARCHAR(255) NOT NULL,
    password_hash   VARCHAR(255) NOT NULL,
    phone_no        VARCHAR(20) NOT NULL,
    dob             DATE NOT NULL,
    join_date       DATE NOT NULL,
    risk_profile    VARCHAR(30) NOT NULL,
    advisor_id      INTEGER NOT NULL,

    CONSTRAINT pk_client
        PRIMARY KEY (client_id),

    CONSTRAINT uq_client_email
        UNIQUE (email),

    CONSTRAINT fk_client_advisor
        FOREIGN KEY (advisor_id)
        REFERENCES advisor(advisor_id)
        ON DELETE RESTRICT,

    CONSTRAINT chk_client_risk_profile
        CHECK (
            risk_profile IN
            (
                'CONSERVATIVE',
                'MODERATE',
                'AGGRESSIVE'
            )
        ),

    CONSTRAINT chk_client_dates
        CHECK (join_date >= dob)
);


-- ============================================================
-- 3. ACCOUNT
-- ============================================================

CREATE TABLE account
(
    account_id          INTEGER GENERATED BY DEFAULT AS IDENTITY,
    opening_date        DATE NOT NULL,
    balance             NUMERIC(19,4) NOT NULL DEFAULT 0.0000,
    purchasing_power    NUMERIC(19,4) NOT NULL DEFAULT 0.0000,

    account_status      VARCHAR(20) NOT NULL DEFAULT 'ACTIVE',

    currency            CHAR(3) NOT NULL,

    -- PostgreSQL replacement for SQL Server ROWVERSION.
    -- Used for optimistic concurrency control.
    version             BIGINT NOT NULL DEFAULT 1,

    suspended_at        TIMESTAMPTZ,
    closed_at           TIMESTAMPTZ,

    client_id           INTEGER NOT NULL,

    CONSTRAINT pk_account
        PRIMARY KEY (account_id),

    CONSTRAINT fk_account_client
        FOREIGN KEY (client_id)
        REFERENCES client(client_id)
        ON DELETE RESTRICT,

    -- Requirement: model exactly three account states.
    CONSTRAINT chk_account_status
        CHECK (
            account_status IN
            (
                'ACTIVE',
                'SUSPENDED',
                'CLOSED'
            )
        ),

    -- Money cannot be negative.
    CONSTRAINT chk_account_balance
        CHECK (balance >= 0.0000),

    CONSTRAINT chk_account_purchasing_power
        CHECK (purchasing_power >= 0.0000),

    -- ISO-style 3-letter currency code.
    CONSTRAINT chk_account_currency
        CHECK (currency ~ '^[A-Z]{3}$'),

    -- Version must always be positive.
    CONSTRAINT chk_account_version
        CHECK (version >= 1),

    -- Opening date cannot be in the future relative to CURRENT_DATE.
    CONSTRAINT chk_account_opening_date
        CHECK (opening_date <= CURRENT_DATE),

    -- Suspension information must match the account state.
    CONSTRAINT chk_account_suspension_state
        CHECK (
            (account_status = 'SUSPENDED' AND suspended_at IS NOT NULL)
            OR
            (account_status <> 'SUSPENDED' AND suspended_at IS NULL)
        ),

    -- Closed accounts must contain a closed timestamp.
    CONSTRAINT chk_account_closure_state
        CHECK (
            (account_status = 'CLOSED' AND closed_at IS NOT NULL)
            OR
            (account_status <> 'CLOSED' AND closed_at IS NULL)
        )
);


-- ============================================================
-- 4. INSTRUMENT
-- ============================================================

CREATE TABLE instrument
(
    instrument_id       INTEGER GENERATED BY DEFAULT AS IDENTITY,
    instrument_ticker   VARCHAR(10) NOT NULL,
    instrument_name     VARCHAR(255) NOT NULL,
    asset_class         VARCHAR(20) NOT NULL,
    instrument_status   VARCHAR(20) NOT NULL DEFAULT 'TRADING',

    CONSTRAINT pk_instrument
        PRIMARY KEY (instrument_id),

    CONSTRAINT uq_instrument_ticker
        UNIQUE (instrument_ticker),

    CONSTRAINT chk_instrument_asset_class
        CHECK (
            asset_class IN
            (
                'EQUITY',
                'BOND',
                'ETF',
                'FUND'
            )
        ),

    -- An instrument can stop trading without deleting the row.
    CONSTRAINT chk_instrument_status
        CHECK (
            instrument_status IN
            (
                'TRADING',
                'HALTED',
                'RETIRED'
            )
        )
);


-- ============================================================
-- 5. ORDERS
-- ============================================================

CREATE TABLE orders
(
    order_id            BIGINT GENERATED BY DEFAULT AS IDENTITY,

    -- Unique key supplied by the client/request.
    -- This is the database-level idempotency mechanism.
    idempotency_key     VARCHAR(100) NOT NULL,

    order_status        VARCHAR(20) NOT NULL DEFAULT 'RECEIVED',

    received_at         TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,

    order_type          VARCHAR(20) NOT NULL,

    price               NUMERIC(19,4) NOT NULL,

    quantity            BIGINT NOT NULL,

    transaction_date    TIMESTAMPTZ,

    account_id          INTEGER NOT NULL,

    instrument_id       INTEGER NOT NULL,

    CONSTRAINT pk_orders
        PRIMARY KEY (order_id),

    -- Critical requirement:
    -- database constraint, not application read-then-write logic.
    CONSTRAINT uq_orders_idempotency_key
        UNIQUE (idempotency_key),

    CONSTRAINT fk_orders_account
        FOREIGN KEY (account_id)
        REFERENCES account(account_id)
        ON DELETE RESTRICT,

    CONSTRAINT fk_orders_instrument
        FOREIGN KEY (instrument_id)
        REFERENCES instrument(instrument_id)
        ON DELETE RESTRICT,

    -- Only RECEIVED or one of the terminal states.
    -- No HALF_FILLED / PARTIALLY_FILLED state exists.
    CONSTRAINT chk_order_status
        CHECK (
            order_status IN
            (
                'RECEIVED',
                'FILLED',
                'CANCELLED',
                'REJECTED'
            )
        ),

    CONSTRAINT chk_order_type
        CHECK (
            order_type IN
            (
                'BUY',
                'SELL'
            )
        ),

    CONSTRAINT chk_order_price
        CHECK (price > 0.0000),

    CONSTRAINT chk_order_quantity
        CHECK (quantity > 0),

    -- RECEIVED orders have no terminal timestamp.
    -- Terminal orders must have exactly one terminal timestamp.
    CONSTRAINT chk_order_terminal_timestamp
        CHECK (
            (
                order_status = 'RECEIVED'
                AND transaction_date IS NULL
            )
            OR
            (
                order_status IN
                (
                    'FILLED',
                    'CANCELLED',
                    'REJECTED'
                )
                AND transaction_date IS NOT NULL
            )
        )
);


-- ============================================================
-- 6. HOLDINGS
-- ============================================================
-- Note:
-- order_id from the original design has intentionally been removed.
--
-- In the original design:
--
--   holding -> order_id -> account_id
--
-- while account_id was also stored directly in holding.
-- That creates a redundant dependency.
--
-- A holding represents the current position of an account in an
-- instrument, so account_id + instrument_id is the natural
-- business uniqueness.
-- ============================================================

CREATE TABLE holdings
(
    holding_id       BIGINT GENERATED BY DEFAULT AS IDENTITY,
    quantity         BIGINT NOT NULL,
    purchase_price   NUMERIC(19,4) NOT NULL,

    account_id       INTEGER NOT NULL,
    instrument_id    INTEGER NOT NULL,

    CONSTRAINT pk_holdings
        PRIMARY KEY (holding_id),

    CONSTRAINT fk_holdings_account
        FOREIGN KEY (account_id)
        REFERENCES account(account_id)
        ON DELETE RESTRICT,

    CONSTRAINT fk_holdings_instrument
        FOREIGN KEY (instrument_id)
        REFERENCES instrument(instrument_id)
        ON DELETE RESTRICT,

    CONSTRAINT uq_holdings_account_instrument
        UNIQUE (account_id, instrument_id),

    CONSTRAINT chk_holding_quantity
        CHECK (quantity >= 0),

    CONSTRAINT chk_holding_purchase_price
        CHECK (purchase_price >= 0.0000)
);


-- ============================================================
-- 7. PREVENT ACCOUNT DELETION
-- ============================================================
-- A closed account remains physically present.
-- It is closed by changing account_status to CLOSED, never by DELETE.
-- ============================================================

CREATE OR REPLACE FUNCTION prevent_account_delete()
RETURNS TRIGGER
LANGUAGE plpgsql
AS $$
BEGIN
    RAISE EXCEPTION
        'Accounts cannot be deleted. Close the account instead.';
END;
$$;


CREATE TRIGGER trg_prevent_account_delete
BEFORE DELETE ON account
FOR EACH ROW
EXECUTE FUNCTION prevent_account_delete();


-- ============================================================
-- 8. ACCOUNT STATE TRANSITION RULES
-- ============================================================
-- Rules:
-- ACTIVE     -> SUSPENDED
-- SUSPENDED  -> ACTIVE
-- ACTIVE     -> CLOSED
-- SUSPENDED  -> CLOSED
--
-- CLOSED     -> anything is forbidden
--
-- This makes suspension reversible but closure terminal.
-- ============================================================

CREATE OR REPLACE FUNCTION enforce_account_state_transition()
RETURNS TRIGGER
LANGUAGE plpgsql
AS $$
BEGIN

    -- Closed accounts cannot be reopened.
    IF OLD.account_status = 'CLOSED'
       AND NEW.account_status <> 'CLOSED' THEN

        RAISE EXCEPTION
            'A CLOSED account cannot be reopened.';
    END IF;

    -- Automatically maintain suspension timestamp.
    IF NEW.account_status = 'SUSPENDED'
       AND OLD.account_status <> 'SUSPENDED' THEN

        NEW.suspended_at := COALESCE(NEW.suspended_at, CURRENT_TIMESTAMP);
    END IF;

    -- Clear suspension timestamp when suspension is reversed.
    IF NEW.account_status <> 'SUSPENDED' THEN
        NEW.suspended_at := NULL;
    END IF;

    -- When closing an account, automatically set closed timestamp.
    IF NEW.account_status = 'CLOSED'
       AND OLD.account_status <> 'CLOSED' THEN

        NEW.closed_at := COALESCE(NEW.closed_at, CURRENT_TIMESTAMP);
    END IF;

    RETURN NEW;
END;
$$;


CREATE TRIGGER trg_account_state_transition
BEFORE UPDATE OF account_status ON account
FOR EACH ROW
EXECUTE FUNCTION enforce_account_state_transition();


-- ============================================================
-- 9. ORDER LIFECYCLE RULES
-- ============================================================
-- An order:
--
--     RECEIVED -> FILLED
--     RECEIVED -> CANCELLED
--     RECEIVED -> REJECTED
--
-- Once terminal, it cannot change to another state.
--
-- There is intentionally NO HALF_FILLED state.
-- ============================================================

CREATE OR REPLACE FUNCTION enforce_order_terminal_state()
RETURNS TRIGGER
LANGUAGE plpgsql
AS $$
BEGIN

    -- Terminal orders are immutable.
    IF OLD.order_status <> 'RECEIVED' THEN

        RAISE EXCEPTION
            'Terminal orders cannot be modified. Current state: %',
            OLD.order_status;
    END IF;

    -- No order may move backwards from RECEIVED to RECEIVED
    -- with a terminal timestamp.
    IF NEW.order_status = 'RECEIVED'
       AND NEW.transaction_date IS NOT NULL THEN

        RAISE EXCEPTION
            'A RECEIVED order cannot have a transaction date.';
    END IF;

    -- Every terminal transition receives the transaction timestamp.
    IF NEW.order_status IN
       (
           'FILLED',
           'CANCELLED',
           'REJECTED'
       )
       AND NEW.transaction_date IS NULL THEN

        NEW.transaction_date := CURRENT_TIMESTAMP;
    END IF;

    RETURN NEW;
END;
$$;


CREATE TRIGGER trg_order_terminal_state
BEFORE UPDATE OF order_status, transaction_date ON orders
FOR EACH ROW
EXECUTE FUNCTION enforce_order_terminal_state();


COMMIT;